<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"

        android:layout_marginEnd="25dp"
        android:layout_marginBottom="32dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:background="@color/violet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shape"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/long_url_edit_text"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/rounded_corner"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"

            android:hint="@string/shorten_a_link_here"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/copy_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/copy_btn"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="46dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/shorten_it"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/long_url_edit_text"
            app:layout_constraintStart_toStartOf="@+id/long_url_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/long_url_edit_text" />


        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/cyan"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"

        android:text="@string/your_link_history"
        android:textSize="17sp"
        android:textColor="@color/grayish_violet"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>